diesel_compile_tests/tests/fail/array_expressions_must_be_same_type.stderr
error[E0277]: Cannot select `f64` from `NoFromClause`
  --> tests/fail/array_expressions_must_be_same_type.rs:15:12
   |
15 |     select(array((1, 3f64)))
   |     ------ ^^^^^^^^^^^^^^^^ the trait `SelectableExpression<NoFromClause>` is not implemented for `f64`, which is required by `SelectStatement<NoFromClause, diesel::query_builder::select_clause::SelectClause<_>>: AsQuery`
   |     |
   |     required by a bound introduced by this call
   |
   = note: `f64` is no valid selection for `NoFromClause`
   = help: the following other types implement trait `SelectableExpression<QS>`:
             <Box<T> as SelectableExpression<QS>>
             <diesel::expression::ops::numeric::Add<Lhs, Rhs> as SelectableExpression<QS>>
             <diesel::expression::ops::numeric::Sub<Lhs, Rhs> as SelectableExpression<QS>>
             <diesel::expression::ops::numeric::Mul<Lhs, Rhs> as SelectableExpression<QS>>
             <diesel::expression::ops::numeric::Div<Lhs, Rhs> as SelectableExpression<QS>>
             <now as SelectableExpression<QS>>
             <today as SelectableExpression<QS>>
             <In<T, U> as SelectableExpression<QS>>
           and $N others
   = note: required for `(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64)` to implement `SelectableExpression<NoFromClause>`
   = note: 1 redundant requirement hidden
   = note: required for `ArrayLiteral<(Bound<Integer, i32>, f64), Integer>` to implement `SelectableExpression<NoFromClause>`
   = note: required for `SelectClause<ArrayLiteral<(Bound<Integer, i32>, f64), Integer>>` to implement `diesel::query_builder::select_clause::SelectClauseExpression<NoFromClause>`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<(Bound<Integer, i32>, f64), Integer>>>` to implement `Query`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<(Bound<Integer, i32>, f64), Integer>>>` to implement `AsQuery`
note: required by a bound in `diesel::select`
  --> $DIESEL/src/query_builder/functions.rs
   |
   | pub fn select<T>(expression: T) -> crate::dsl::select<T>
   |        ------ required by a bound in this function
...
   |     crate::dsl::select<T>: AsQuery,
   |                            ^^^^^^^ required by this bound in `select`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `f64: ValidGrouping<()>` is not satisfied
  --> tests/fail/array_expressions_must_be_same_type.rs:15:12
   |
15 |     select(array((1, 3f64)))
   |     ------ ^^^^^^^^^^^^^^^^ the trait `ValidGrouping<()>` is not implemented for `f64`, which is required by `SelectStatement<NoFromClause, diesel::query_builder::select_clause::SelectClause<_>>: AsQuery`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `ValidGrouping<GroupByClause>`:
             <Box<T> as ValidGrouping<GB>>
             <diesel::expression::ops::numeric::Add<Lhs, Rhs> as ValidGrouping<__GroupByClause>>
             <diesel::expression::ops::numeric::Sub<Lhs, Rhs> as ValidGrouping<__GroupByClause>>
             <diesel::expression::ops::numeric::Mul<Lhs, Rhs> as ValidGrouping<__GroupByClause>>
             <diesel::expression::ops::numeric::Div<Lhs, Rhs> as ValidGrouping<__GroupByClause>>
             <now as ValidGrouping<__GroupByClause>>
             <today as ValidGrouping<__GroupByClause>>
             <In<T, U> as ValidGrouping<__GroupByClause>>
           and $N others
   = note: required for `(f64,)` to implement `ValidGrouping<()>`
   = note: 2 redundant requirements hidden
   = note: required for `ArrayLiteral<(Bound<Integer, i32>, f64), Integer>` to implement `ValidGrouping<()>`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<(Bound<Integer, i32>, f64), Integer>>>` to implement `Query`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<(Bound<Integer, i32>, f64), Integer>>>` to implement `AsQuery`
note: required by a bound in `diesel::select`
  --> $DIESEL/src/query_builder/functions.rs
   |
   | pub fn select<T>(expression: T) -> crate::dsl::select<T>
   |        ------ required by a bound in this function
...
   |     crate::dsl::select<T>: AsQuery,
   |                            ^^^^^^^ required by this bound in `select`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: Cannot select `f64` from `NoFromClause`
  --> tests/fail/array_expressions_must_be_same_type.rs:16:33
   |
16 |         .get_result::<Vec<i32>>(&mut connection)
   |          ----------             ^^^^^^^^^^^^^^^ the trait `SelectableExpression<NoFromClause>` is not implemented for `f64`, which is required by `SelectStatement<NoFromClause, diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(_, _), _>>>: LoadQuery<'_, _, Vec<i32>>`
   |          |
   |          required by a bound introduced by this call
   |
   = note: `f64` is no valid selection for `NoFromClause`
   = help: the following other types implement trait `SelectableExpression<QS>`:
             <Box<T> as SelectableExpression<QS>>
             <diesel::expression::ops::numeric::Add<Lhs, Rhs> as SelectableExpression<QS>>
             <diesel::expression::ops::numeric::Sub<Lhs, Rhs> as SelectableExpression<QS>>
             <diesel::expression::ops::numeric::Mul<Lhs, Rhs> as SelectableExpression<QS>>
             <diesel::expression::ops::numeric::Div<Lhs, Rhs> as SelectableExpression<QS>>
             <now as SelectableExpression<QS>>
             <today as SelectableExpression<QS>>
             <In<T, U> as SelectableExpression<QS>>
           and $N others
   = note: required for `(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64)` to implement `SelectableExpression<NoFromClause>`
   = note: 1 redundant requirement hidden
   = note: required for `ArrayLiteral<(Bound<Integer, i32>, f64), Integer>` to implement `SelectableExpression<NoFromClause>`
   = note: required for `SelectClause<ArrayLiteral<(Bound<Integer, i32>, f64), Integer>>` to implement `diesel::query_builder::select_clause::SelectClauseExpression<NoFromClause>`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<(Bound<Integer, i32>, f64), Integer>>>` to implement `Query`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<(Bound<Integer, i32>, f64), Integer>>>` to implement `LoadQuery<'_, _, Vec<i32>>`
note: required by a bound in `get_result`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
   |        ---------- required by a bound in this associated function
   |     where
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `f64: ValidGrouping<()>` is not satisfied
  --> tests/fail/array_expressions_must_be_same_type.rs:16:33
   |
16 |         .get_result::<Vec<i32>>(&mut connection)
   |          ----------             ^^^^^^^^^^^^^^^ the trait `ValidGrouping<()>` is not implemented for `f64`, which is required by `SelectStatement<NoFromClause, diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(_, _), _>>>: LoadQuery<'_, _, Vec<i32>>`
   |          |
   |          required by a bound introduced by this call
   |
   = help: the following other types implement trait `ValidGrouping<GroupByClause>`:
             <Box<T> as ValidGrouping<GB>>
             <diesel::expression::ops::numeric::Add<Lhs, Rhs> as ValidGrouping<__GroupByClause>>
             <diesel::expression::ops::numeric::Sub<Lhs, Rhs> as ValidGrouping<__GroupByClause>>
             <diesel::expression::ops::numeric::Mul<Lhs, Rhs> as ValidGrouping<__GroupByClause>>
             <diesel::expression::ops::numeric::Div<Lhs, Rhs> as ValidGrouping<__GroupByClause>>
             <now as ValidGrouping<__GroupByClause>>
             <today as ValidGrouping<__GroupByClause>>
             <In<T, U> as ValidGrouping<__GroupByClause>>
           and $N others
   = note: required for `(f64,)` to implement `ValidGrouping<()>`
   = note: 2 redundant requirements hidden
   = note: required for `ArrayLiteral<(Bound<Integer, i32>, f64), Integer>` to implement `ValidGrouping<()>`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<(Bound<Integer, i32>, f64), Integer>>>` to implement `Query`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<(Bound<Integer, i32>, f64), Integer>>>` to implement `LoadQuery<'_, _, Vec<i32>>`
note: required by a bound in `get_result`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
   |        ---------- required by a bound in this associated function
   |     where
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `f64: QueryId` is not satisfied
  --> tests/fail/array_expressions_must_be_same_type.rs:16:33
   |
16 |         .get_result::<Vec<i32>>(&mut connection)
   |          ----------             ^^^^^^^^^^^^^^^ the trait `QueryId` is not implemented for `f64`, which is required by `SelectStatement<NoFromClause, diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(_, _), _>>>: LoadQuery<'_, _, Vec<i32>>`
   |          |
   |          required by a bound introduced by this call
   |
   = help: the following other types implement trait `QueryId`:
             Box<T>
             DeleteStatement<T, U, Ret>
             FromClause<F>
             diesel::query_builder::insert_statement::insert_with_default_for_sqlite::SqliteBatchInsertWrapper<V, T, QId, STATIC_QUERY_ID>
             diesel::query_builder::select_clause::DefaultSelectClause<QS>
             BoxedSqlQuery<'_, DB, Query>
             diesel::query_builder::where_clause::BoxedWhereClause<'a, DB>
             query_source::joins::Join<Left, Right, Kind>
           and $N others
   = note: required for `(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64)` to implement `QueryId`
   = note: 3 redundant requirements hidden
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<(Bound<Integer, i32>, f64), Integer>>>` to implement `QueryId`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<(Bound<Integer, i32>, f64), Integer>>>` to implement `LoadQuery<'_, _, Vec<i32>>`
note: required by a bound in `get_result`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
   |        ---------- required by a bound in this associated function
   |     where
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: `f64` is no valid SQL fragment for the `Pg` backend
  --> tests/fail/array_expressions_must_be_same_type.rs:16:33
   |
16 |         .get_result::<Vec<i32>>(&mut connection)
   |          ----------             ^^^^^^^^^^^^^^^ the trait `QueryFragment<Pg>` is not implemented for `f64`, which is required by `SelectStatement<NoFromClause, diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(_, _), _>>>: LoadQuery<'_, _, Vec<i32>>`
   |          |
   |          required by a bound introduced by this call
   |
   = note: this usually means that the `Pg` database system does not support
           this SQL syntax
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             <Box<T> as QueryFragment<DB>>
             <DeleteStatement<T, U, Ret> as QueryFragment<DB>>
             <FromClause<F> as QueryFragment<DB>>
             <diesel::query_builder::insert_statement::insert_with_default_for_sqlite::SqliteBatchInsertWrapper<Vec<diesel::query_builder::insert_statement::ValuesClause<V, Tab>>, Tab, QId, STATIC_QUERY_ID> as QueryFragment<Sqlite>>
             <BoxedLimitOffsetClause<'a, Mysql> as QueryFragment<Mysql>>
             <BoxedLimitOffsetClause<'a, Pg> as QueryFragment<Pg>>
             <BoxedLimitOffsetClause<'a, Sqlite> as QueryFragment<Sqlite>>
             <diesel::query_builder::select_clause::DefaultSelectClause<QS> as QueryFragment<DB>>
           and $N others
   = note: required for `(diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>, f64)` to implement `QueryFragment<Pg>`
   = note: 4 redundant requirements hidden
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<(Bound<Integer, i32>, f64), Integer>>>` to implement `QueryFragment<Pg>`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<(Bound<Integer, i32>, f64), Integer>>>` to implement `LoadQuery<'_, _, Vec<i32>>`
note: required by a bound in `get_result`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
   |        ---------- required by a bound in this associated function
   |     where
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `f64: diesel::Expression` is not satisfied
  --> tests/fail/array_expressions_must_be_same_type.rs:15:22
   |
15 |     select(array((1, 3f64)))
   |            -----     ^^^^ the trait `diesel::Expression` is not implemented for `f64`, which is required by `({integer}, f64): AsExpressionList<_>`
   |            |
   |            required by a bound introduced by this call
   |
   = help: the following other types implement trait `diesel::Expression`:
             Box<T>
             diesel::expression::ops::numeric::Add<Lhs, Rhs>
             diesel::expression::ops::numeric::Sub<Lhs, Rhs>
             diesel::expression::ops::numeric::Mul<Lhs, Rhs>
             diesel::expression::ops::numeric::Div<Lhs, Rhs>
             now
             today
             In<T, U>
           and $N others
   = note: required for `f64` to implement `AsExpression<diesel::sql_types::Integer>`
   = note: required for `(i32, f64)` to implement `AsExpressionList<diesel::sql_types::Integer>`
note: required by a bound in `diesel::dsl::array`
  --> $DIESEL/src/pg/expression/array.rs
   |
   | pub fn array<ST, T>(elements: T) -> ArrayLiteral<T::Expression, ST>
   |        ----- required by a bound in this function
   | where
   |     T: AsExpressionList<ST>,
   |        ^^^^^^^^^^^^^^^^^^^^ required by this bound in `array`

error[E0277]: Cannot select `{integer}` from `NoFromClause`
  --> tests/fail/array_expressions_must_be_same_type.rs:18:12
   |
18 |     select(array((1, 3f64)))
   |     ------ ^^^^^^^^^^^^^^^^ the trait `SelectableExpression<NoFromClause>` is not implemented for `{integer}`, which is required by `SelectStatement<NoFromClause, diesel::query_builder::select_clause::SelectClause<_>>: AsQuery`
   |     |
   |     required by a bound introduced by this call
   |
   = note: `{integer}` is no valid selection for `NoFromClause`
   = help: the following other types implement trait `SelectableExpression<QS>`:
             <Box<T> as SelectableExpression<QS>>
             <diesel::expression::ops::numeric::Add<Lhs, Rhs> as SelectableExpression<QS>>
             <diesel::expression::ops::numeric::Sub<Lhs, Rhs> as SelectableExpression<QS>>
             <diesel::expression::ops::numeric::Mul<Lhs, Rhs> as SelectableExpression<QS>>
             <diesel::expression::ops::numeric::Div<Lhs, Rhs> as SelectableExpression<QS>>
             <now as SelectableExpression<QS>>
             <today as SelectableExpression<QS>>
             <In<T, U> as SelectableExpression<QS>>
           and $N others
   = note: required for `({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>)` to implement `SelectableExpression<NoFromClause>`
   = note: 1 redundant requirement hidden
   = note: required for `ArrayLiteral<({integer}, Bound<Double, f64>), Double>` to implement `SelectableExpression<NoFromClause>`
   = note: required for `SelectClause<ArrayLiteral<({integer}, Bound<Double, f64>), Double>>` to implement `diesel::query_builder::select_clause::SelectClauseExpression<NoFromClause>`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<({integer}, Bound<Double, f64>), Double>>>` to implement `Query`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<({integer}, Bound<Double, f64>), Double>>>` to implement `AsQuery`
note: required by a bound in `diesel::select`
  --> $DIESEL/src/query_builder/functions.rs
   |
   | pub fn select<T>(expression: T) -> crate::dsl::select<T>
   |        ------ required by a bound in this function
...
   |     crate::dsl::select<T>: AsQuery,
   |                            ^^^^^^^ required by this bound in `select`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `{integer}: ValidGrouping<()>` is not satisfied
  --> tests/fail/array_expressions_must_be_same_type.rs:18:12
   |
18 |     select(array((1, 3f64)))
   |     ------ ^^^^^^^^^^^^^^^^ the trait `ValidGrouping<()>` is not implemented for `{integer}`, which is required by `SelectStatement<NoFromClause, diesel::query_builder::select_clause::SelectClause<_>>: AsQuery`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `ValidGrouping<GroupByClause>`:
             <Box<T> as ValidGrouping<GB>>
             <diesel::expression::ops::numeric::Add<Lhs, Rhs> as ValidGrouping<__GroupByClause>>
             <diesel::expression::ops::numeric::Sub<Lhs, Rhs> as ValidGrouping<__GroupByClause>>
             <diesel::expression::ops::numeric::Mul<Lhs, Rhs> as ValidGrouping<__GroupByClause>>
             <diesel::expression::ops::numeric::Div<Lhs, Rhs> as ValidGrouping<__GroupByClause>>
             <now as ValidGrouping<__GroupByClause>>
             <today as ValidGrouping<__GroupByClause>>
             <In<T, U> as ValidGrouping<__GroupByClause>>
           and $N others
   = note: required for `({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>)` to implement `ValidGrouping<()>`
   = note: 1 redundant requirement hidden
   = note: required for `ArrayLiteral<({integer}, Bound<Double, f64>), Double>` to implement `ValidGrouping<()>`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<({integer}, Bound<Double, f64>), Double>>>` to implement `Query`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<({integer}, Bound<Double, f64>), Double>>>` to implement `AsQuery`
note: required by a bound in `diesel::select`
  --> $DIESEL/src/query_builder/functions.rs
   |
   | pub fn select<T>(expression: T) -> crate::dsl::select<T>
   |        ------ required by a bound in this function
...
   |     crate::dsl::select<T>: AsQuery,
   |                            ^^^^^^^ required by this bound in `select`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: Cannot select `{integer}` from `NoFromClause`
  --> tests/fail/array_expressions_must_be_same_type.rs:19:33
   |
19 |         .get_result::<Vec<f64>>(&mut connection)
   |          ----------             ^^^^^^^^^^^^^^^ the trait `SelectableExpression<NoFromClause>` is not implemented for `{integer}`, which is required by `SelectStatement<NoFromClause, diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(_, _), _>>>: LoadQuery<'_, _, Vec<f64>>`
   |          |
   |          required by a bound introduced by this call
   |
   = note: `{integer}` is no valid selection for `NoFromClause`
   = help: the following other types implement trait `SelectableExpression<QS>`:
             <Box<T> as SelectableExpression<QS>>
             <diesel::expression::ops::numeric::Add<Lhs, Rhs> as SelectableExpression<QS>>
             <diesel::expression::ops::numeric::Sub<Lhs, Rhs> as SelectableExpression<QS>>
             <diesel::expression::ops::numeric::Mul<Lhs, Rhs> as SelectableExpression<QS>>
             <diesel::expression::ops::numeric::Div<Lhs, Rhs> as SelectableExpression<QS>>
             <now as SelectableExpression<QS>>
             <today as SelectableExpression<QS>>
             <In<T, U> as SelectableExpression<QS>>
           and $N others
   = note: required for `({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>)` to implement `SelectableExpression<NoFromClause>`
   = note: 1 redundant requirement hidden
   = note: required for `ArrayLiteral<({integer}, Bound<Double, f64>), Double>` to implement `SelectableExpression<NoFromClause>`
   = note: required for `SelectClause<ArrayLiteral<({integer}, Bound<Double, f64>), Double>>` to implement `diesel::query_builder::select_clause::SelectClauseExpression<NoFromClause>`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<({integer}, Bound<Double, f64>), Double>>>` to implement `Query`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<({integer}, Bound<Double, f64>), Double>>>` to implement `LoadQuery<'_, _, Vec<f64>>`
note: required by a bound in `get_result`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
   |        ---------- required by a bound in this associated function
   |     where
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `{integer}: ValidGrouping<()>` is not satisfied
  --> tests/fail/array_expressions_must_be_same_type.rs:19:33
   |
19 |         .get_result::<Vec<f64>>(&mut connection)
   |          ----------             ^^^^^^^^^^^^^^^ the trait `ValidGrouping<()>` is not implemented for `{integer}`, which is required by `SelectStatement<NoFromClause, diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(_, _), _>>>: LoadQuery<'_, _, Vec<f64>>`
   |          |
   |          required by a bound introduced by this call
   |
   = help: the following other types implement trait `ValidGrouping<GroupByClause>`:
             <Box<T> as ValidGrouping<GB>>
             <diesel::expression::ops::numeric::Add<Lhs, Rhs> as ValidGrouping<__GroupByClause>>
             <diesel::expression::ops::numeric::Sub<Lhs, Rhs> as ValidGrouping<__GroupByClause>>
             <diesel::expression::ops::numeric::Mul<Lhs, Rhs> as ValidGrouping<__GroupByClause>>
             <diesel::expression::ops::numeric::Div<Lhs, Rhs> as ValidGrouping<__GroupByClause>>
             <now as ValidGrouping<__GroupByClause>>
             <today as ValidGrouping<__GroupByClause>>
             <In<T, U> as ValidGrouping<__GroupByClause>>
           and $N others
   = note: required for `({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>)` to implement `ValidGrouping<()>`
   = note: 1 redundant requirement hidden
   = note: required for `ArrayLiteral<({integer}, Bound<Double, f64>), Double>` to implement `ValidGrouping<()>`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<({integer}, Bound<Double, f64>), Double>>>` to implement `Query`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<({integer}, Bound<Double, f64>), Double>>>` to implement `LoadQuery<'_, _, Vec<f64>>`
note: required by a bound in `get_result`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
   |        ---------- required by a bound in this associated function
   |     where
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `{integer}: QueryId` is not satisfied
  --> tests/fail/array_expressions_must_be_same_type.rs:19:33
   |
19 |         .get_result::<Vec<f64>>(&mut connection)
   |          ----------             ^^^^^^^^^^^^^^^ the trait `QueryId` is not implemented for `{integer}`, which is required by `SelectStatement<NoFromClause, diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(_, _), _>>>: LoadQuery<'_, _, Vec<f64>>`
   |          |
   |          required by a bound introduced by this call
   |
   = help: the following other types implement trait `QueryId`:
             Box<T>
             DeleteStatement<T, U, Ret>
             FromClause<F>
             diesel::query_builder::insert_statement::insert_with_default_for_sqlite::SqliteBatchInsertWrapper<V, T, QId, STATIC_QUERY_ID>
             diesel::query_builder::select_clause::DefaultSelectClause<QS>
             BoxedSqlQuery<'_, DB, Query>
             diesel::query_builder::where_clause::BoxedWhereClause<'a, DB>
             query_source::joins::Join<Left, Right, Kind>
           and $N others
   = note: required for `({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>)` to implement `QueryId`
   = note: 3 redundant requirements hidden
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<({integer}, Bound<Double, f64>), Double>>>` to implement `QueryId`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<({integer}, Bound<Double, f64>), Double>>>` to implement `LoadQuery<'_, _, Vec<f64>>`
note: required by a bound in `get_result`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
   |        ---------- required by a bound in this associated function
   |     where
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: `{integer}` is no valid SQL fragment for the `Pg` backend
  --> tests/fail/array_expressions_must_be_same_type.rs:19:33
   |
19 |         .get_result::<Vec<f64>>(&mut connection)
   |          ----------             ^^^^^^^^^^^^^^^ the trait `QueryFragment<Pg>` is not implemented for `{integer}`, which is required by `SelectStatement<NoFromClause, diesel::query_builder::select_clause::SelectClause<diesel::pg::expression::array::ArrayLiteral<(_, _), _>>>: LoadQuery<'_, _, Vec<f64>>`
   |          |
   |          required by a bound introduced by this call
   |
   = note: this usually means that the `Pg` database system does not support
           this SQL syntax
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             <Box<T> as QueryFragment<DB>>
             <DeleteStatement<T, U, Ret> as QueryFragment<DB>>
             <FromClause<F> as QueryFragment<DB>>
             <diesel::query_builder::insert_statement::insert_with_default_for_sqlite::SqliteBatchInsertWrapper<Vec<diesel::query_builder::insert_statement::ValuesClause<V, Tab>>, Tab, QId, STATIC_QUERY_ID> as QueryFragment<Sqlite>>
             <BoxedLimitOffsetClause<'a, Mysql> as QueryFragment<Mysql>>
             <BoxedLimitOffsetClause<'a, Pg> as QueryFragment<Pg>>
             <BoxedLimitOffsetClause<'a, Sqlite> as QueryFragment<Sqlite>>
             <diesel::query_builder::select_clause::DefaultSelectClause<QS> as QueryFragment<DB>>
           and $N others
   = note: required for `({integer}, diesel::expression::bound::Bound<diesel::sql_types::Double, f64>)` to implement `QueryFragment<Pg>`
   = note: 4 redundant requirements hidden
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<({integer}, Bound<Double, f64>), Double>>>` to implement `QueryFragment<Pg>`
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<({integer}, Bound<Double, f64>), Double>>>` to implement `LoadQuery<'_, _, Vec<f64>>`
note: required by a bound in `get_result`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
   |        ---------- required by a bound in this associated function
   |     where
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
   = note: consider using `--verbose` to print the full type name to the console
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `{integer}: diesel::Expression` is not satisfied
  --> tests/fail/array_expressions_must_be_same_type.rs:18:19
   |
18 |     select(array((1, 3f64)))
   |            -----  ^ the trait `diesel::Expression` is not implemented for `{integer}`, which is required by `({integer}, f64): AsExpressionList<_>`
   |            |
   |            required by a bound introduced by this call
   |
   = help: the following other types implement trait `diesel::Expression`:
             Box<T>
             diesel::expression::ops::numeric::Add<Lhs, Rhs>
             diesel::expression::ops::numeric::Sub<Lhs, Rhs>
             diesel::expression::ops::numeric::Mul<Lhs, Rhs>
             diesel::expression::ops::numeric::Div<Lhs, Rhs>
             now
             today
             In<T, U>
           and $N others
   = note: required for `{integer}` to implement `AsExpression<diesel::sql_types::Double>`
   = note: required for `({integer}, f64)` to implement `AsExpressionList<diesel::sql_types::Double>`
note: required by a bound in `diesel::dsl::array`
  --> $DIESEL/src/pg/expression/array.rs
   |
   | pub fn array<ST, T>(elements: T) -> ArrayLiteral<T::Expression, ST>
   |        ----- required by a bound in this function
   | where
   |     T: AsExpressionList<ST>,
   |        ^^^^^^^^^^^^^^^^^^^^ required by this bound in `array`
